--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,10 @@ body {
     font-size: 18px;
 }
 
+p{
+    margin-top: 16px;
+}
+
 section.content {
     display: flex;
     flex-direction: column;
